# cw20-cli

./: .env  .gitignore  Cargo.toml  README.md  cw20-cli_local.json  start_juno.sh
src/: contract.rs  main.rs
